# FPT_MiniProject

./: .gitignore  CMakeLists.txt  main.cpp
include/: global.h  global.hpp  music_library.json
include/controller/: MusicPlayerController.hpp
include/model/: MusicLibrary.hpp  MusicPlayer.hpp  PlaybackHistory.hpp  PlaybackHistoryTemp.hpp  PlaybackQueue.hpp  PlaynextQueue.hpp  ShuffleManager.hpp  Song.hpp
include/view/: MusicPlayerView.hpp
src/: main.cpp
src/controller/: MusicPlayerController.cpp
src/model/: MusicLibrary.cpp  MusicPlayer.cpp  PlaybackHistory.cpp  PlaybackHistoryTemp.cpp  PlaybackQueue.cpp  PlaynextQueue.cpp
src/view/: MusicPlayerView.cpp
utils/: utils.cpp  utils.hpp
